fix: textAlignment prevent undo operation

--- a/src/style/editor.less
+++ b/src/style/editor.less
@@ -26,6 +26,10 @@
     font-size: 16px;
     padding: 20px;
   }
+  .public-DraftEditorPlaceholder-root {
+    left: 0;
+    right: 0;
+  }
 }
 
 .RichEditor-hidePlaceholder .public-DraftEditorPlaceholder-root {
